# lores-node

./: .envrc  .gitignore  .release-it.json  Dockerfile  LICENCE.md  README.md  compose.yml  docker-compose-p2p-test.yml  docker-compose.yml  docker-swarm-app-dev.yml  docker-swarm-local-dev.yml  justfile  mprocs-2node.yaml  package-lock.json  package.json
backend/: Cargo.toml  Dockerfile  Dockerfile-development  Dockerfile-p2p-test  config.yaml  docker-compose.yml
backend/.sqlx/: query-036a3db6b978ed150c947ad157b44c8add03b62dcd6f07705ac20a2eb75e5548.json  query-079ab87ddc4e2d990d843a6aac1b6fa7d2d89bd94218799b82450b886711c9a3.json  query-07d84fdd2188949df224b1905eaea35d8e5b990cfbcc012942da8dde5bd219fc.json  query-0a743ca6109794787099cc1e1f22f5897911461309ac2ec42d93e677deedadf8.json  query-0b91e81072b4c41a61c8371d65eb0311e0c990580b0bd89342038c0999a92577.json  query-0e615888e26dff30f9561c1328d845cd0ff3c56055ae32f86cd2de7117c28f1f.json  query-1148cdb71ec44be26ce17b5b550efbeb60b9cc409fed555ba12138656f8c3544.json  query-149fda59f080cbbbf92de37e62a9fecab7649b24b6230c56be6ce30b4b4cd056.json  query-22a073b3cd03aca634bd241e6f7558b27063200a91535bb180a013e80dfd5696.json  query-26e716c6587b1c0efbd605b82abf132ea6a0c39f92f4e789f7d8c2a3a576e305.json  query-385a41aed7adc1a93206b2cd726e78bf7e4ad8e5fe937cff5541ee74c0ff240f.json  query-41c10131975acacdc5de602980a0267c5f7cd09e20defc4d423cabf863478f46.json  query-4632b51b37aef69ee9281a5954e45d8e424c04203a38846e74675c3c87f55783.json  query-4e1b3950ce88de8baf89fede59c81fecfd08a6d7570b18465d3c8eed02fb3525.json  query-50f8306557e4d1ebbaec7a3fb8339ef426b65f1d36493d7d54e809a4c701d23d.json  query-536eaa337f365b5afba72045c8ee1c19f5906beabff35f5cf4fe262dff255b4e.json  query-55dfee0dd34f993cc17d796107c794128e29f4c7089bf08721b8880670a3ce16.json  query-5707c0aaf6e8aa322b9655b1b6d887d82d04171c22692fd5b42df146ecc9caa7.json  query-5a1f8d5cd476d41e6a6bceb088f05cfddee5c57e01769b4dbe2ca8732d1ee57f.json  query-6a70ca21c147f47c0542e66e212a5908bd58be96951d9fbaeadc0dec84199dc5.json  query-6c143bdc3fd8e0a9e64f2d0f05cea565db471839b79049b22ecbd50c3962a567.json  query-6d0ade866ca87f9713045ed2bb786571915da7d08e479164d1d6ab8c9c1da71e.json  query-7c2f2320a979a1531a19db1dc1a2abbe8f3d6333bd3b2eddfc8274f235ca57de.json  query-82c8202b02c30189cacbd528c94f6f208070ba3c90b595035bce405d8c2acc5e.json  query-85cf385ed60e041011f7c55a02bcee602284711c2d4a97625de5dcd09ff3efc1.json  query-8ac022a2fe7d9c8423a490dd5fe08e9aa0e0afaad20340cc22383a1a4cd204f0.json  query-8ade2b060c7221346ce2b2b583264754e493c91045cac2be1a090a7689076e71.json  query-92b97483c8aae3c027b87c98bbeb5189c0c66f975f107f04b999141559aee626.json  query-997d4bc923ee630e81f753be7b32cc89e7881b9e9ac81fac8f9656fbb7f352e0.json  query-9993671174845714fbbdb05337f53da1a00143c4e682f040f5b37170aee6d77a.json  query-a1c1e18d7d887207d0511e44119f1cfa89f4bdad6951384dcfcfe877a476dd0b.json  query-b53ec46e00e8c5b4a28119ca471e23a59d1e4371eda79d6f683625d4ae3fc344.json  query-b5b212896e51facb7e118f0c6be2cd19c04080847023fcc43a59354962a4ee72.json  query-be3590bdf5bcf392b1ec28b5a745d74ffd2fd3c6d0910bcf1a071c30386449c2.json  query-c1b19f31ca67e2bc5694c1fc6af58e260987a710eb8a826d151b22889cc8af1f.json  query-c97995413d672d9012b654b1705f2d9a5abd4a7518626b8cbb7dcc73c4c303fc.json  query-cb465a3f244ac4b9e1b369a061c7a5fa3c5093c917381d0006e3a55f4ecd2fae.json  query-cea02cc6a5b60e3c6193af897608d99d280d16ff3618983d4909e274842d3e1e.json  query-d31ecb506407dff3d5c5b21a6b632ed4cb6695566bf0d30506510ef7069c26b3.json  query-dad07617d38d6f71bc2f2247338773410caebb9f2f68d3dad513e41fb3e37509.json  (+8 more)
backend/data/: .gitignore  config.toml
backend/lores-example-app-cli/: Cargo.toml  build.rs
backend/lores-example-app-cli/src/: main.rs
backend/lores-node-axum/: Cargo.toml
backend/lores-node-axum/src/: main.rs  static_server.rs
backend/lores-p2panda/: Cargo.toml
backend/lores-p2panda-client/: Cargo.toml  README.md  build.rs
backend/lores-p2panda-client/proto/: panda.proto
backend/lores-p2panda-client/src/: lib.rs  lores.panda.v1.rs
backend/lores-p2panda-server/: Cargo.toml  build.rs
backend/lores-p2panda-server/proto/: panda.proto
backend/lores-p2panda-server/src/: idempotency_store.rs  installation_notifier.rs  instance_notifier.rs  lib.rs
backend/lores-p2panda/src/: lib.rs  log_access.rs  network.rs  node_status.rs  operation_store.rs  operations.rs  panda_node.rs  panda_node_inner.rs  region.rs  subscription.rs  topic.rs  topic_status.rs
backend/lores-panda-cli/: Cargo.toml
backend/lores-panda-cli/src/: main.rs
backend/migrations/: 0003_add-public-ip-to-nodes.sql  0004_create-nodes-statuses.sql  0007_add_apps.sql
backend/migrations/config/: 0004_create-node-statuses.sql  0005_create-current-node-statuses.sql
backend/migrations/projection/: 0001_init_schema.sql
backend/migrations_nodedatadb/: 0001_create_node_stewards.sql  0002_add_more_token_fields_to_node_stewards.sql  0002_create_app_installations.sql  0002_create_app_instances.sql  0002_create_app_region_bindings.sql  0003_create_local_apps.sql
backend/migrations_projectiondb/: 0001_init_schema.sql  0002_add_map_to_regions.sql  0006_remove_config_tables.sql  0008_add_fields_to_node.sql
backend/src/: api.rs  main.rs  static_server.rs
backend/src/admin_api/: client_events.rs  mod.rs
backend/src/api/: mod.rs
backend/src/app_repos/: git.rs  installed.rs  mod.rs
backend/src/apps/: mod.rs
backend/src/auth_api/: admin.rs  admin_routes.rs  admin_user_repo.rs  auth_backend.rs  auth_repo.rs  mod.rs
backend/src/config/: config.rs  mod.rs
backend/src/data/: entities.rs  mod.rs  setup.rs
backend/src/docker/: docker_compose.rs  docker_service.rs  docker_stack.rs  mod.rs  utilities.rs
backend/src/event_handlers/: app_registered.rs  handler_utilities.rs  mod.rs  node_announced.rs  node_status_posted.rs  node_updated.rs
backend/src/events/: fairing.rs  handler_map.rs  mod.rs
backend/src/infra/: db.rs
backend/src/local_apps/: installed_apps.rs  mod.rs  stack_apps.rs
backend/src/old_panda_comms/: config.rs
backend/src/panda_comms/: config.rs  container.rs  event_encoding.rs  mod.rs  (+12 more)
(+376 files in other folders)
