[package]
name = "lores-node"
version = "0.14.1"
edition = "2021"
publish = false

[dependencies]

anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.5", features = ["ws"] }
axum-login = "0.17.0"
chrono = { version = "0.4.42", features = ["serde"] }
confy = "1.0.0"
copy_dir = "0.1.3"
experimental-node = { git = "https://github.com/p2panda/experimental-node", branch = "latest-p2panda-main" }
futures-util = "0.3.31"
git2 = { version = "0.20.2", features = ["vendored-openssl"] }
hex = "0.4.3"
iroh = "0.34.1"
jsonschema = "0.33.0"
lazy_static = "1.5.0"
openssl = { version = "0.10.73", features = ["vendored"] }
p2panda-blobs = { git = "https://github.com/p2panda/p2panda.git", rev = "5425873f747ea6751217193471e3f45a2b12e8b8" }
p2panda-core = { git = "https://github.com/p2panda/p2panda.git", rev = "5425873f747ea6751217193471e3f45a2b12e8b8" }
p2panda-discovery = { git = "https://github.com/p2panda/p2panda.git", rev = "5425873f747ea6751217193471e3f45a2b12e8b8", features = [
  "mdns",
] }
p2panda-net = { git = "https://github.com/p2panda/p2panda.git", rev = "5425873f747ea6751217193471e3f45a2b12e8b8" }
p2panda-store = { git = "https://github.com/p2panda/p2panda.git", rev = "5425873f747ea6751217193471e3f45a2b12e8b8", features = [
  "sqlite",
] }
p2panda-stream = { git = "https://github.com/p2panda/p2panda.git", rev = "5425873f747ea6751217193471e3f45a2b12e8b8" }
p2panda-sync = { git = "https://github.com/p2panda/p2panda.git", rev = "5425873f747ea6751217193471e3f45a2b12e8b8", features = [
  "log-sync",
] }
password-auth = "1.0.0"
pwgen2 = "0.7.3"
semver = "1.0.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
short-uuid = "0.2.0"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-native-tls",
  "sqlite",
  "chrono",
] }
tempfile = "3.23.0"
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
tower-sessions = { version = "0.14.0", features = ["signed"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
utoipa = "5.3.1"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
uuid = "1.18.1"
