[package]
name = "lores-node"
version = "0.15.2"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.5", features = ["ws"] }
axum-login = "0.17.0"
chrono = { version = "0.4.42", features = ["serde"] }
confy = "1.0.0"
copy_dir = "0.1.3"
futures-util = "0.3.31"
git2 = { version = "0.20.2", features = ["vendored-openssl"] }
hex = "0.4.3"
iroh = "0.95.1"
jsonschema = "0.33.0"
lazy_static = "1.5.0"
openssl = { version = "0.10.73", features = ["vendored"] }
p2panda-net = "0.5.0"
p2panda-core = "0.5.0"
p2panda-store = { version = "0.5.0", features = ["sqlite"] }
p2panda-discovery = "0.5.0"
p2panda-sync = "0.5.0"
p2panda-stream = "0.5.0"
password-auth = "1.0.0"
pwgen2 = "0.7.3"
semver = "1.0.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
short-uuid = "0.2.0"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-native-tls",
  "sqlite",
  "chrono",
] }
tempfile = "3.23.0"
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
tower-sessions = { version = "0.14.0", features = ["signed"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
utoipa = "5.3.1"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
uuid = "1.18.1"
tokio-stream = "0.1.18"


[patch.crates-io]
iroh-gossip = { git = "https://github.com/p2panda/iroh-gossip", rev = "533c34a2758518ece19c1de9f21bc40d61f9b5a5" }
