[workspace]
resolver = "3"
members = [
  "lores-node-axum",
  "lores-p2panda",
  "lores-p2panda-server",
  "lores-p2panda-client",
  "lores-example-app-cli",
]
default-members = ["lores-node-axum"]

[workspace.dependencies]
hex = "0.4.3"
p2panda-core = "0.7.0"
prost = "0.14"
serde = { version = "1.0.219" }
sqlx = { version = "0.8.6", default-features = false }
thiserror = "2.0.17"
tokio = { version = "1.46.1" }
tokio-stream = { version = "0.1.18" }
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
