[package]
name = "lores-panda-cli"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "lores-panda-cli"
path = "src/main.rs"

[dependencies]
ciborium = "0.2"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
lores-p2panda-client = { path = "../lores-p2panda-client" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "io-util",
  "io-std",
  "signal",
] }
