[package]
name = "lores-p2panda-client"
version = "0.1.0"
edition = "2021"
description = "Rust client for the lores-p2panda-server gRPC API"
publish = false

[dependencies]
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic = "0.12"

[build-dependencies]
tonic-build = "0.12"
