[package]
name = "lores-p2panda-client"
version = "0.3.1"
authors = ["Jade Ambrose", "Merri-bek Tech Inc."]
edition = "2024"
rust-version = "1.85.0"
description = "Rust client for the lores-p2panda-server gRPC API."
readme = "README.md"
homepage = "https://lores.tech/"
repository = "https://github.com/local-resilience-tech/lores-node/"
keywords = ["p2p", "grpc", "lores", "p2panda", "coop-cloud"]
categories = ["api-bindings"]
publish = true
license-file = "LICENSE.txt"

[dependencies]
prost = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic = "0.14"
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"
