[package]
name = "lores-p2panda-server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
lores-p2panda = { path = "../lores-p2panda" }
prost = "0.13"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.12"

[build-dependencies]
tonic-build = "0.12"
