[package]
name = "lores-p2panda-server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
lores-p2panda = { path = "../lores-p2panda" }
prost = "0.14"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.14"
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"
