[package]
name = "lores-p2panda-server"
version = "0.3.0"
edition = "2024"
rust-version = "1.96"
publish = false

[dependencies]
lores-p2panda = { path = "../lores-p2panda" }
prost = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "sqlite"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true, features = ["sync"] }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = "0.1"

[build-dependencies]
tonic-prost-build = { workspace = true }
