[package]
name = "lores-p2panda"
version = "0.20.0"
edition = "2024"
publish = false

[dependencies]
p2panda = "0.6.1"
p2panda-core = { workspace = true }
p2panda-store = { version = "0.6.1", features = ["sqlite"] }
p2panda-net = "0.6.1"
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, default-features = false, features = [
  "runtime-tokio",
  "sqlite",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tracing = "0.1"
hex = { workspace = true }
rand = "0.9"
